--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <canvas id="fireworksCanvas"></canvas>
     <div class="first_message" id="first_message">
-        <h1>Chúc Ngọc ngày 8/3! Vui vẻ</h1>
+        <h1>Chúc Mẹ ngày 8/3! Vui vẻ</h1>
     </div>    
     <div class="second_message" id="second_message">
-        <span>Ngủ ngon! mà khoan đã... Ngọc đếm theo nhé, vì bất ngờ ở phía sau... 
+        <span>Ngủ ngon! mà khoan đã... Mẹ đếm theo nhé, vì bất ngờ ở phía sau... 
             <h1 class="" id="second_message_">1 phút trôi qua...</h1>
             <h1 class="" id="second_message__">Đợi chờ là hạnh phúc mà...
                 <div class="face_image">
@@ -28,7 +28,7 @@
         </span>
     </div>   
     <div class="third_message" id="third_message">
-        <h1>Không có gì hết... KKK... Bị dụ. <span id="counter"></span> </h1>
+        <h1>Hết!!! <span id="counter"></span> </h1>
     </div> 
     <script src="script.js"></script>
 </body>
